# django-mythril

./: .dockerignore  .gitignore  Procfile  README.md  all_tests.sh  docker-compose.yml  manage.py  pyproject.toml  requirements.txt
analysis/: admin_migration.py  models.py  serializers.py  tasks.py  tests.py  urls.py  views.py
analysis/migrations/: 0001_initial.py  0002_auto_20180123_0724.py  0003_auto_20180123_1942.py  __init__.py  depreciated_0001_initial.py
contractshark/: __init__.py  celery_app.py  settings.py  urls.py  wsgi.py
test/: contracts.py  test_celery.py  test_command_line.sh  test_webapi.py
